    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="8"
            android:padding="@dimen/fullMargin"
            android:layout_below="@+id/toolbar">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="2"
                app:srcCompat="@drawable/ic_list_black_24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fullMargin"
                android:textSize="18dp"
                android:textColor="#000000"
                android:text="@string/explainationUp" />
            <Button
                android:id="@+id/videoList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fullMargin"
                android:text="@string/list" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="2"
                app:srcCompat="@drawable/ic_input_black_24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fullMargin"
                android:textSize="18dp"
                android:textColor="#000000"
                android:text="@string/explainationMiddle" />
            <Button
                android:id="@+id/videoUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fullMargin"
                android:text="@string/urlButt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="2"
                app:srcCompat="@drawable/ic_update_black_24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fullMargin"
                android:textSize="18dp"
                android:textColor="#000000"
                android:text="@string/explainationDown" />
            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fullMargin"
                android:text="@string/updButt" />
        </GridLayout>


    </RelativeLayout>
