<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fullMargin"
        android:text="@string/url"
        android:id="@+id/explaination_up_tw" />

    <EditText
        android:id="@+id/videoUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explaination_up_tw"
        android:layout_marginLeft="@dimen/fullMargin"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/urlHint" />

    <Button
        android:id="@+id/playVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoUrl"
        android:layout_margin="@dimen/fullMargin"
        android:layout_centerHorizontal="true"
        android:text="@string/play" />

</RelativeLayout>