<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Vr application">
        <EditTextPreference android:title="Vr application package"
            android:key="vrApplicationPackage"
            android:summary="Please provide the package name of the VR application"
            android:defaultValue="@string/PREFERENCE_package"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Video List">
        <EditTextPreference android:title="Local Video XML file"
            android:key="localVideoXMLFile"
            android:summary="Please provide the name of the current file containing video entries"
            android:defaultValue="@string/PREFERENCE_local"
            />
        <EditTextPreference android:title="Remote Video XML file"
            android:key="remoteVideoXMLFile"
            android:summary="Please provide the remote URL to update the video list"
            android:defaultValue="@string/PREFERENCE_remote"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="ExoPlayer parameters">
        <EditTextPreference android:title="Startup Buffer Size"
            android:key="bufferForPlayback"
            android:summary="Please provide the amount of video that it is needed to start the video playback (milliseconds)"
            android:defaultValue="1500"
            android:inputType="number"
            />
        <EditTextPreference android:title="Buffer Size"
        android:key="bufferForPlaybackAR"
        android:summary="Please provide the amount of video that it is needed to re-start the video playback after a rebuffering event (milliseconds)"
        android:defaultValue="1500"
        android:inputType="number"
        />
        <EditTextPreference android:title="Min Buffer Size"
            android:key="minBufferSize"
            android:summary="Please provide the default minimum duration of media that the player will attempt to ensure is buffered at all times (milliseconds)."
            android:defaultValue="15000"
            android:inputType="number"
            />
        <EditTextPreference android:title="Max Buffer Size"
            android:key="maxBufferSize"
            android:summary="Please provide the default maximum duration of media that the player will attempt to buffer (milliseconds)"
            android:defaultValue="30000"
            android:inputType="number"
            />
    </PreferenceCategory>
</PreferenceScreen>